added OG tags and removed useless log

--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta charset="utf-8" />
+    <meta property="og:title" content="GCRP Country Viewer" />
+    <meta property="og:description" content="Watch country informations, weapons, material and other stuff about the PMG RP Wargame's diverse nations." />
     <title>Country Viewer</title>
   </head>
   <body>
